Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-78854

5.14: quick/scenegraph/rendernode not compiling with iOS

XMLWordPrintable

    • iOS/tvOS/watchOS

      Install Qt5.14.0 iOS binaries and launch QtCreator. Open project quick/scenegraph/rendernode and compile. Fails with following error:

      Undefined symbols for architecture arm64:
      "MetalRenderNode::MetalRenderNode()",
      referenced from:
      CustomRenderItem::updatePaintNode(QSGNode*,QQuickItem::UpdatePaintNodeData*) in customrenderitem.o
      "MetalRenderNodeResourceBuilder::build()",
      referenced from:
      CustomRenderItem::updatePaintNode(QSGNode*, QQuickItem::UpdatePaintNodeData*) in customrenderitem.o
      "MetalRenderNode::sync(QQuickItem*)",
      referenced from:
      CustomRenderItem::updatePaintNode(QSGNode*,QQuickItem::UpdatePaintNodeData*) in customrenderitem.o
      ld:
      symbol(s) not found for architecture arm64
      clang:
      error: linker command failed with exit code 1 (use -v to see invocation)
      ** BUILD FAILED **
      The following build commands failed:
      Ld Release-iphoneos/rendernode.app/rendernode normal arm64
      (1 failure)
      make: *** [xcodebuild-release-device] Error 65
      12:46:22: The process "/usr/bin/make" exited with code 2.
      Error while building/deploying project rendernode (kit: Qt
      5.14.0 for iOS)
      When executing step "Make"
      

      If the example is not supported on iOS this report can be closed as invalid.

       

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            lagocs Laszlo Agocs
            joaijala Johanna Äijälä
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes