Make rendernode example compile on iOS

Without Metal support for now.

The ifdef pattern is the same as in QRhi in qtbase. It is to be revised
once Metal support is introduced for iOS.

Task-number: QTBUG-78854
Change-Id: I10f37ddcb42c27958270bd3ca8bf9b8457a4bea3
Reviewed-by: Paul Olav Tvete <paul.tvete@qt.io>